# sdlc-agent

./: .gitignore  AGENTS.md  CLAUDE.md  MEMORY.md  README.md  agent_app.py  main.py  playground.ipynb  pyproject.toml  test-milvus-connection.ipynb  test-milvus-connection.py
common/: tools.py
common/custom_agents/: custom_agent.py  planner_agent.py
common/plugins/: context_builder.py  debugging_plugin.py  token_tracker.py
demos/: create_backend_api.md  doll_shop_backend.md
doll_shop/: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  progress.md  pyproject.toml  pytest.ini  run.py
doll_shop/alembic/: env.py
doll_shop/alembic/versions/: 46f2442485ab_initial_schema.py  a1b2c3d4e5f6_add_reservations.py
doll_shop/api/: main.py
doll_shop/api/configurations/: base.py
doll_shop/api/exceptions/: __init__.py  api.py
doll_shop/api/models/: __init__.py  auth.py  customers.py  dolls.py  orders.py  reservations.py
doll_shop/api/modules/: __init__.py  customers.py  database.py  dolls.py  orders.py  reservations.py
doll_shop/api/routers/: __init__.py  customers.py  dolls.py  orders.py  reservations.py
doll_shop/api/schemas/: __init__.py  customers.py  dolls.py  orders.py  reservations.py
doll_shop/k8s/base/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
doll_shop/k8s/overlays/production/: kustomization.yaml  secret.yaml
doll_shop/terraform/: app.tf  main.tf  outputs.tf  secrets.tf  variables.tf
doll_shop/tests/e2e/: __init__.py
doll_shop/tests/e2e/conf/: _conftest_auth.py  _conftest_common.py
doll_shop/tests/e2e/customers/: test_customers.py
doll_shop/tests/e2e/dolls/: test_dolls.py
doll_shop/tests/e2e/orders/: test_orders.py
doll_shop/tests/e2e/reservations/: test_reservations.py
sdlc_agent/: agent.py
skills/: sdlc_cycle.md
(+3 files in other folders)
